# python-package

./: .pre-commit-config.yaml  README.md  environment.yaml  environment.yml  pyproject.toml
.github/workflows/: pre-commit.yaml
src/: README.md
src/python_package/: test_module.py
